# ratios

./: CMakeLists.txt  README.md  build.bat  projectversion.h
src/: osc.h  ratios_cids.h  ratios_processor.cpp
vst3sdk/public.sdk/samples/vst/programchange/: projectversion.h
